--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- Bootstrap Font Icon CSS -->
     <script src="https://kit.fontawesome.com/e990fe34da.js" crossorigin="anonymous"></script>
     <title>LinkedIn Clone</title>
