--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e990fe34da.js" crossorigin="anonymous"></script>
-     <link rel="stylesheet" href="CSS/style.css">
+     <link rel="stylesheet" href="style.css">
     <title>LinkedIn Clone</title>
 </head>
 
